deploy: 7fa978f8adf5a1e36313ae134e1f00ece667b5e6

--- a/control/config.html
+++ b/control/config.html
@@ -182,7 +182,7 @@
 </ul>
 </li>
 <li>
-<p>https://www.sidefx.com/docs/houdini/ref/env.html</p>
+<p><a href="https://www.sidefx.com/docs/houdini/ref/env.html">https://www.sidefx.com/docs/houdini/ref/env.html</a></p>
 </li>
 </ul>
 <div class="table-wrapper"><table><thead><tr><th>Env</th><th></th></tr></thead><tbody>
@@ -202,7 +202,7 @@
 </div>
 <h2 id="job"><a class="header" href="#job">Job</a></h2>
 <ul>
-<li>https://www.sidefx.com/docs/houdini/basics/project.html</li>
+<li><a href="https://www.sidefx.com/docs/houdini/basics/project.html">https://www.sidefx.com/docs/houdini/basics/project.html</a></li>
 </ul>
 <h2 id="단축키"><a class="header" href="#단축키">단축키</a></h2>
 <div class="table-wrapper"><table><thead><tr><th>Edit &gt; Hotkeys</th><th></th><th></th></tr></thead><tbody>
