--- a/control/key.html
+++ b/control/key.html
@@ -215,13 +215,15 @@
 <tr><td></td><td>ALT + 쉬프트 + W</td><td>새로운 창</td></tr>
 </tbody></table>
 </div>
-<p>https://www.sidefx.com/docs/houdini/basics/radialmenus.html
-X Snapping controls
+<ul>
+<li><a href="https://www.sidefx.com/docs/houdini/basics/radialmenus.html">https://www.sidefx.com/docs/houdini/basics/radialmenus.html</a></li>
+</ul>
+<p>X Snapping controls
 C The “Current” menu. You can choose the menu on this key using the  Radial switching menu at the top of the main interface.
 V View controls</p>
 <h2 id="object-view"><a class="header" href="#object-view">Object View</a></h2>
 <ul>
-<li>https://www.sidefx.com/docs/houdini/network/wire.html</li>
+<li><a href="https://www.sidefx.com/docs/houdini/network/wire.html">https://www.sidefx.com/docs/houdini/network/wire.html</a></li>
 </ul>
 <div class="table-wrapper"><table><thead><tr><th>Object View</th><th></th></tr></thead><tbody>
 <tr><td>Y</td><td>가위자르기</td></tr>
