--- a/etc/license.html
+++ b/etc/license.html
@@ -162,7 +162,7 @@
                 <div id="content" class="content">
                     <main>
                         <ul>
-<li>https://www.sidefx.com/faq/question/houdini-engine-plugin-free-for-unity-and-ue4/</li>
+<li><a href="https://www.sidefx.com/faq/question/houdini-engine-plugin-free-for-unity-and-ue4/">https://www.sidefx.com/faq/question/houdini-engine-plugin-free-for-unity-and-ue4/</a></li>
 </ul>
 <div class="table-wrapper"><table><thead><tr><th>HOUDINI ENGINE</th><th></th><th></th></tr></thead><tbody>
 <tr><td>for Unity/Unreal</td><td>.hda</td><td>최대 10개</td></tr>
@@ -171,10 +171,12 @@
 <tr><td>APPRENTICE</td><td>X</td><td></td></tr>
 </tbody></table>
 </div>
-<p>https://www.sidefx.com/docs/houdini/unity/
-https://github.com/sideeffects/HoudiniEngineForUnity
-https://www.sidefx.com/download/daily-builds/</p>
-<p>https://www.sidefx.com/products/compare/</p>
+<ul>
+<li><a href="https://www.sidefx.com/docs/houdini/unity/">https://www.sidefx.com/docs/houdini/unity/</a></li>
+<li><a href="https://github.com/sideeffects/HoudiniEngineForUnity">https://github.com/sideeffects/HoudiniEngineForUnity</a></li>
+<li><a href="https://www.sidefx.com/download/daily-builds/">https://www.sidefx.com/download/daily-builds/</a></li>
+<li><a href="https://www.sidefx.com/products/compare/">https://www.sidefx.com/products/compare/</a></li>
+</ul>
 <p>APPRENTICE</p>
 <ul>
 <li>Houdini Engine for Unity 사용 안됨</li>
