--- a/etc/snippet.html
+++ b/etc/snippet.html
@@ -241,7 +241,7 @@ Skin</p>
 </ul>
 <h3 id="유니티-소스-컨트롤"><a class="header" href="#유니티-소스-컨트롤">유니티 소스 컨트롤</a></h3>
 <ul>
-<li>https://www.sidefx.com/docs/houdini/unity/sourcecontrol.html</li>
+<li><a href="https://www.sidefx.com/docs/houdini/unity/sourcecontrol.html">https://www.sidefx.com/docs/houdini/unity/sourcecontrol.html</a></li>
 <li><UnityProject>/heu_session.txt : 현재 세션 정보를 저장하는 데 사용하는 임시 파일
 <ul>
 <li>.gitignore 할것</li>
@@ -626,7 +626,7 @@ else
 <ul>
 <li>벌칸렌더러의 문제로 보임
 <ul>
-<li>https://www.reddit.com/r/Houdini/comments/1jloe5r/random_white_plane_using_terrainheightfield_tools/</li>
+<li><a href="https://www.reddit.com/r/Houdini/comments/1jloe5r/random_white_plane_using_terrainheightfield_tools/">https://www.reddit.com/r/Houdini/comments/1jloe5r/random_white_plane_using_terrainheightfield_tools/</a></li>
 </ul>
 </li>
 <li>Edit &gt; Preferences &gt; 3D Viewports
