--- a/file/file.html
+++ b/file/file.html
@@ -178,9 +178,9 @@
 </tbody></table>
 </div>
 <ul>
-<li>Blosc
+<li>Blosc 압축
 <ul>
-<li>https://www.blosc.org/pages/blosc-in-depth/</li>
+<li><a href="https://www.blosc.org/pages/blosc-in-depth/">https://www.blosc.org/pages/blosc-in-depth/</a></li>
 </ul>
 </li>
 </ul>
