--- a/game-engine/unity.html
+++ b/game-engine/unity.html
@@ -166,10 +166,10 @@
 <li>
 <p>sidefx</p>
 <ul>
-<li>https://github.com/sideeffects/HoudiniEngineForUnity
+<li><a href="https://github.com/sideeffects/HoudiniEngineForUnity">https://github.com/sideeffects/HoudiniEngineForUnity</a>
 <ul>
-<li>https://www.sidefx.com/docs/houdini/unity/pluginapi.html</li>
-<li>https://github.com/sideeffects/HoudiniEngineForUnity/tree/Houdini20.5/Plugins/HoudiniEngineUnity/Scripts/Examples</li>
+<li><a href="https://www.sidefx.com/docs/houdini/unity/pluginapi.html">https://www.sidefx.com/docs/houdini/unity/pluginapi.html</a></li>
+<li><a href="https://github.com/sideeffects/HoudiniEngineForUnity/tree/Houdini20.5/Plugins/HoudiniEngineUnity/Scripts/Examples">https://github.com/sideeffects/HoudiniEngineForUnity/tree/Houdini20.5/Plugins/HoudiniEngineUnity/Scripts/Examples</a></li>
 <li><a href="https://youtu.be/1qjRWmqbzp8&amp;t=578">Procedural Race Tracks for Mobile Games | Stoyan Dimitrov | GDC 2019</a></li>
 </ul>
 </li>
@@ -189,13 +189,13 @@
 <p>유니티 엔진에서 후디니 엔진과 통신하는 것이므로 에디트모드일때만 동작한다.</p>
 </li>
 <li>
-<p>https://www.sidefx.com/docs/houdini/unity/attributes.html</p>
+<p><a href="https://www.sidefx.com/docs/houdini/unity/attributes.html">https://www.sidefx.com/docs/houdini/unity/attributes.html</a></p>
 </li>
 <li>
-<p>https://www.sidefx.com/docs/houdini/unity/meshes.html</p>
+<p><a href="https://www.sidefx.com/docs/houdini/unity/meshes.html">https://www.sidefx.com/docs/houdini/unity/meshes.html</a></p>
 </li>
 <li>
-<p>https://www.sidefx.com/docs/houdini/unity/instancing.html</p>
+<p><a href="https://www.sidefx.com/docs/houdini/unity/instancing.html">https://www.sidefx.com/docs/houdini/unity/instancing.html</a></p>
 </li>
 </ul>
 <h2 id=""><a class="header" href="#"></a></h2>
@@ -208,37 +208,67 @@
 rendered_collision_geo Adds a non-convex, rendered mesh collider</p>
 <p>lod</p>
 <ul>
-<li>https://www.sidefx.com/docs/houdini/unity/meshes/lod.html</li>
+<li><a href="https://www.sidefx.com/docs/houdini/unity/meshes/lod.html">https://www.sidefx.com/docs/houdini/unity/meshes/lod.html</a></li>
 </ul>
 <p>lod_screensize</p>
-<p>https://www.sidefx.com/docs/houdini/unity/terrain/scattering.html</p>
-<p>https://docs.unity3d.com/ScriptReference/TerrainData.html
-The TerrainData class stores heightmaps, detail mesh positions, tree instances, and terrain texture alpha maps.
-The Terrain component links to the terrain data and renders it.</p>
 <ul>
+<li>
+<p><a href="https://www.sidefx.com/docs/houdini/unity/terrain/scattering.html">https://www.sidefx.com/docs/houdini/unity/terrain/scattering.html</a></p>
+</li>
+<li>
+<p><a href="https://docs.unity3d.com/ScriptReference/TerrainData.html">https://docs.unity3d.com/ScriptReference/TerrainData.html</a></p>
+<ul>
+<li>The TerrainData class stores heightmaps, detail mesh positions, tree instances, and terrain texture alpha maps.</li>
+<li>The Terrain component links to the terrain data and renders it.</li>
 <li>treeInstances</li>
 <li>treePrototypes</li>
 </ul>
-<p>https://docs.unity3d.com/ScriptReference/TreeInstance.html
-Contains information about a tree placed in the Terrain game object.
-This struct can be accessed from the TerrainData Object.
-Description</p>
+</li>
+<li>
+<p><a href="https://docs.unity3d.com/ScriptReference/TreeInstance.html">https://docs.unity3d.com/ScriptReference/TreeInstance.html</a></p>
 <ul>
-<li>color</li>
-<li>heightScale</li>
-<li>lightmapColor</li>
-<li>position</li>
-<li>prototypeIndex</li>
-<li>rotation</li>
-<li>widthScale</li>
+<li>Contains information about a tree placed in the Terrain game object.</li>
+<li>This struct can be accessed from the TerrainData Object.</li>
+<li>Description</li>
 </ul>
-<p>https://docs.unity3d.com/ScriptReference/TreePrototype.html
-Simple class that contains a pointer to a tree prototype.
-This class is used by the TerrainData gameObject.</p>
+</li>
+<li>
+<p>color</p>
+</li>
+<li>
+<p>heightScale</p>
+</li>
+<li>
+<p>lightmapColor</p>
+</li>
+<li>
+<p>position</p>
+</li>
+<li>
+<p>prototypeIndex</p>
+</li>
+<li>
+<p>rotation</p>
+</li>
+<li>
+<p>widthScale</p>
+</li>
+<li>
+<p><a href="https://docs.unity3d.com/ScriptReference/TreePrototype.html">https://docs.unity3d.com/ScriptReference/TreePrototype.html</a></p>
 <ul>
-<li>bendFactor</li>
-<li>navMeshLod</li>
-<li>prefab</li>
+<li>Simple class that contains a pointer to a tree prototype.</li>
+<li>This class is used by the TerrainData gameObject.</li>
+</ul>
+</li>
+<li>
+<p>bendFactor</p>
+</li>
+<li>
+<p>navMeshLod</p>
+</li>
+<li>
+<p>prefab</p>
+</li>
 </ul>
 <p>s@unity_hf_tree_prototype0
 s@unity_hf_tree_prototype1
