--- a/node/geometry/geo_node.html
+++ b/node/geometry/geo_node.html
@@ -280,6 +280,8 @@ Refine</p>
 Box Cutter : 박스모양으로 자름 Boolean이랑 비슷함
 Physical Painter : 물체위에 물체붙이기
 Thicken : 양옆으로 늘어나기</p>
+<p>Labs Instance Attribute : 디버그용. xyz표시되는 gizmo가 유용하다
+Labs symmetrize : mirror랑 비슷</p>
 <div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
 <tr><td>Merge</td><td>합치기. 필요에 따라 Fuse를 뒤에 붙여 중복 제거</td></tr>
 <tr><td>Soft Transform</td><td>부드러운 곡선</td></tr>
