--- a/script/hscript-expression.html
+++ b/script/hscript-expression.html
@@ -198,18 +198,29 @@ $BBZ = relbbox(@P).z
 </tbody></table>
 </div>
 <ul>
-<li>box 바닦붙이기
+<li>
+<p>box 바닦붙이기</p>
 <ul>
 <li>box의 translate.y = $SIZEY/2</li>
 <li>혹은 center.y = ch("sizey")/2</li>
 </ul>
 </li>
+<li>
+<p><a href="https://www.sidefx.com/docs/houdini/ref/expression_cookbook.html">https://www.sidefx.com/docs/houdini/ref/expression_cookbook.html</a></p>
+</li>
+<li>
+<p>detail</p>
+<ul>
+<li><a href="https://www.sidefx.com/docs/houdini/expressions/detail.html">https://www.sidefx.com/docs/houdini/expressions/detail.html</a></li>
 </ul>
-<p>https://www.sidefx.com/docs/houdini/ref/expression_cookbook.html</p>
-<p>detail
-https://www.sidefx.com/docs/houdini/expressions/detail.html
-opinputpath
-https://www.sidefx.com/docs/houdini/expressions/opinputpath.html</p>
+</li>
+<li>
+<p>opinputpath</p>
+</li>
+<li>
+<p><a href="https://www.sidefx.com/docs/houdini/expressions/opinputpath.html">https://www.sidefx.com/docs/houdini/expressions/opinputpath.html</a></p>
+</li>
+</ul>
 <p>padzero</p>
 
                     </main>
