--- a/script/vex.html
+++ b/script/vex.html
@@ -523,7 +523,7 @@ pcimport
 pcnumfound</p>
 <h2 id="제어"><a class="header" href="#제어">제어</a></h2>
 <ul>
-<li>https://www.sidefx.com/docs/houdini/vex/statement.html</li>
+<li><a href="https://www.sidefx.com/docs/houdini/vex/statement.html">https://www.sidefx.com/docs/houdini/vex/statement.html</a></li>
 <li>없는거 : switch</li>
 </ul>
 <p>if / for / while / break / continue / do while</p>
