--- a/tutorial/joy_of_vex.html
+++ b/tutorial/joy_of_vex.html
@@ -165,7 +165,7 @@
 <ul>
 <li><a href="https://www.tokeru.com/cgwiki/JoyOfVex.html">https://www.tokeru.com/cgwiki/JoyOfVex.html</a>
 <ul>
-<li>https://github.com/jtomori/vex_tutorial</li>
+<li><a href="https://github.com/jtomori/vex_tutorial">https://github.com/jtomori/vex_tutorial</a></li>
 </ul>
 </li>
 <li><a href="https://www.youtube.com/playlist?list=PLTXmnikJEYnBtSfn4LwKx5vpopwrInp18">Houdini Hangout - The Joy of VEX</a></li>
@@ -288,10 +288,10 @@ d += @Time;
 <h3 id="06"><a class="header" href="#06">06</a></h3>
 <p>::pass</p>
 <h3 id="07"><a class="header" href="#07">07</a></h3>
-<p>https://www.sidefx.com/docs/houdini/vex/functions/minpos.html
+<p><a href="https://www.sidefx.com/docs/houdini/vex/functions/minpos.html">https://www.sidefx.com/docs/houdini/vex/functions/minpos.html</a>
 minpos VEX function
 Given a position in world space, returns the position of the closest point on a given geometry.</p>
-<p>https://www.sidefx.com/docs/houdini/vex/functions/nearpoint.html
+<p><a href="https://www.sidefx.com/docs/houdini/vex/functions/nearpoint.html">https://www.sidefx.com/docs/houdini/vex/functions/nearpoint.html</a>
 nearpoint VEX function
 Finds the closest point in a geometry.</p>
 <p>@P = point(1, 'P', @ptnum);
@@ -364,7 +364,7 @@ matrix m = qconvert(@orient);
 </code></pre>
 <p>radians
 qconvert</p>
-<p>https://www.sidefx.com/docs/houdini/vex/attribtypeinfo_suite.html
+<p><a href="https://www.sidefx.com/docs/houdini/vex/attribtypeinfo_suite.html">https://www.sidefx.com/docs/houdini/vex/attribtypeinfo_suite.html</a>
 Sets the meaning of an attribute in geometry.
 int  setattribtypeinfo(int geohandle, string attribclass, string name, string typeinfo)</p>
 <h3 id="18"><a class="header" href="#18">18</a></h3>
