--- a/tutorial/project_titan.html
+++ b/tutorial/project_titan.html
@@ -162,21 +162,18 @@
                 <div id="content" class="content">
                     <main>
                         <ul>
-<li>PROJECT TITAN
+<li><a href="https://www.sidefx.com/titan/">PROJECT TITAN</a>
 <ul>
-<li>https://www.sidefx.com/titan/</li>
 <li>도시 배경</li>
 </ul>
 </li>
-<li>PROJECT PEGASUS
+<li><a href="https://www.sidefx.com/pegasus/">PROJECT PEGASUS</a>
 <ul>
-<li>https://www.sidefx.com/pegasus/</li>
 <li>산 지형</li>
 </ul>
 </li>
-<li>PROJECT GROT
+<li><a href="https://www.sidefx.com/learn-main-menu/tech-demos/project-grot/">PROJECT GROT</a>
 <ul>
-<li>https://www.sidefx.com/learn-main-menu/tech-demos/project-grot/</li>
 <li>용암 지형</li>
 </ul>
 </li>
@@ -189,10 +186,10 @@
 <h2 id="project-titan-stacking-tool"><a class="header" href="#project-titan-stacking-tool">PROJECT TITAN STACKING TOOL</a></h2>
 <ul>
 <li>
-<p>https://www.sidefx.com/tutorials/project-titan-stacking-tool/</p>
+<p><a href="https://www.sidefx.com/tutorials/project-titan-stacking-tool/">https://www.sidefx.com/tutorials/project-titan-stacking-tool/</a></p>
 <ul>
-<li>by Thomas Tobin - https://www.artstation.com/thomasctobin</li>
-<li>https://www.youtube.com/playlist?list=PLXNFA1EysfYm0MPSArwg-Kdnb1fWyat1K</li>
+<li>by Thomas Tobin - <a href="https://www.artstation.com/thomasctobin">https://www.artstation.com/thomasctobin</a></li>
+<li><a href="https://www.youtube.com/playlist?list=PLXNFA1EysfYm0MPSArwg-Kdnb1fWyat1K">https://www.youtube.com/playlist?list=PLXNFA1EysfYm0MPSArwg-Kdnb1fWyat1K</a></li>
 </ul>
 </li>
 <li>
@@ -243,7 +240,7 @@
 <p>Object Merge로 언리얼 DataTable을 가져오면 point에 attribute를 가지게 됨.</p>
 </li>
 <li>
-<p>https://www.sidefx.com/ja/forum/topic/86532/?page=1#post-374007</p>
+<p><a href="https://www.sidefx.com/ja/forum/topic/86532/?page=1#post-374007">https://www.sidefx.com/ja/forum/topic/86532/?page=1#post-374007</a></p>
 <ul>
 <li>Labs Building From Patterns 편집</li>
 </ul>
@@ -359,7 +356,7 @@ detail:
 <ul>
 <li>Scatter and Algin 으로 점을 뿌리고
 <ul>
-<li>https://www.sidefx.com/docs/houdini/nodes/sop/scatteralign.html</li>
+<li><a href="https://www.sidefx.com/docs/houdini/nodes/sop/scatteralign.html">https://www.sidefx.com/docs/houdini/nodes/sop/scatteralign.html</a></li>
 <li>Point Count Method : By Density</li>
 <li>Density Scale에 따라 오브젝트 크기도 달라짐</li>
 </ul>
@@ -490,7 +487,7 @@ detail:
 <li>
 <p>Pack</p>
 <ul>
-<li>https://www.sidefx.com/docs/houdini/nodes/sop/pack.html</li>
+<li><a href="https://www.sidefx.com/docs/houdini/nodes/sop/pack.html">https://www.sidefx.com/docs/houdini/nodes/sop/pack.html</a></li>
 </ul>
 <pre><code class="language-txt">- Path Attribute: op:\`opfullpath('.')\`
 - Name Attribute: id
@@ -569,7 +566,7 @@ detail:
 <li>Pack (pack_for_cluster)</li>
 <li>Cluster Points
 <ul>
-<li>https://www.sidefx.com/docs/houdini/nodes/sop/clusterpoints.html
+<li><a href="https://www.sidefx.com/docs/houdini/nodes/sop/clusterpoints.html">https://www.sidefx.com/docs/houdini/nodes/sop/clusterpoints.html</a>
 <ul>
 <li>Point attribute가 cluster가 생기고 해당 클러스터 번호가 들어간다.</li>
 </ul>
@@ -765,9 +762,9 @@ detail:
 <h2 id="project-titan-cable-tool"><a class="header" href="#project-titan-cable-tool">PROJECT TITAN CABLE TOOL</a></h2>
 <ul>
 <li>
-<p>https://www.sidefx.com/tutorials/project-titan-cable-tool/</p>
+<p><a href="https://www.sidefx.com/tutorials/project-titan-cable-tool/">https://www.sidefx.com/tutorials/project-titan-cable-tool/</a></p>
 <ul>
-<li>https://www.youtube.com/playlist?list=PLXNFA1EysfYnkP5GncdwIVsZABbZ2z_Ud</li>
+<li><a href="https://www.youtube.com/playlist?list=PLXNFA1EysfYnkP5GncdwIVsZABbZ2z_Ud">https://www.youtube.com/playlist?list=PLXNFA1EysfYnkP5GncdwIVsZABbZ2z_Ud</a></li>
 </ul>
 </li>
 <li>
@@ -893,16 +890,20 @@ detail:
 </li>
 </ul>
 <hr />
+<h2 id="project-titan-rails-tool"><a class="header" href="#project-titan-rails-tool">PROJECT TITAN RAILS TOOL</a></h2>
+<p>:pass</p>
+<h2 id="project-titan-fence-tool"><a class="header" href="#project-titan-fence-tool">PROJECT TITAN FENCE TOOL</a></h2>
+<p>: pass</p>
+<hr />
 <p>PROJECT TITAN IVY TOOL</p>
 <p>ivy: 담쟁이덩굴</p>
 <p>shrub 관목 (=bush)</p>
 <p>PROJECT TITAN PLATFORM TOOL
-PROJECT TITAN FENCE TOOL
 PROJECT TITAN TREE PIVOT PAINTER
-PROJECT TITAN RAILS TOOL
 PROJECT TITAN VAT CHARACTERS
 PROJECT TITAN BUILDING TOOL
-PROJECT TITAN GPT SIGNAGE</p>
+PROJECT TITAN GPT SIGNAGE
+PROJECT TITAN TRAIN TOOL</p>
 
                     </main>
 
