deploy: 16682d68a8beda174e1eb293c9415a40c70ec18f

--- a/control/key.html
+++ b/control/key.html
@@ -247,6 +247,8 @@ V View controls</p>
 <tr><td>Ctrl + I</td><td>Edit Background Images: Enable/Disable</td></tr>
 <tr><td>Ctrl + F</td><td>노드 찾기</td></tr>
 <tr><td>Alt</td><td>선을 끌어당기고 있는 상태에서 이음 노드 추가.</td></tr>
+<tr><td>Alt + 노드 드래그</td><td>노드 복사</td></tr>
+<tr><td>Shift + Ctrl + Alt + 노드 드래그</td><td>노드 레퍼런스 생성</td></tr>
 <tr><td>Page Up / Page Down</td><td>윗노드 / 아랫노드</td></tr>
 <tr><td>Ctrl + 숫자</td><td>노드에 단축키 지정. 숫자로 이동가능하게 됨</td></tr>
 </tbody></table>
