--- a/etc/reference.html
+++ b/etc/reference.html
@@ -627,6 +627,18 @@ pos.y -= sag;
 
 @P = pos;
 </code></pre>
+<h2 id="juanjo-martínez"><a class="header" href="#juanjo-martínez">Juanjo Martínez</a></h2>
+<ul>
+<li><a href="https://www.youtube.com/c/JuanjoMart%C3%ADnezVFX/">https://www.youtube.com/c/JuanjoMart%C3%ADnezVFX/</a></li>
+<li><a href="https://github.com/juanjo4martinez">https://github.com/juanjo4martinez</a></li>
+</ul>
+<h2 id="nikola-damjanov"><a class="header" href="#nikola-damjanov">NIKOLA DAMJANOV</a></h2>
+<ul>
+<li><a href="https://www.artstation.com/nikoladamjanov">https://www.artstation.com/nikoladamjanov</a></li>
+<li><a href="https://www.sidefx.com/contentlibrary/cops-mega-file/">COPs Mega File</a></li>
+<li><a href="https://www.sidefx.com/tutorials/the-complete-a-z-terrain-handbook/">THE COMPLETE A-Z TERRAIN HANDBOOK</a></li>
+<li><a href="https://www.youtube.com/watch?v=eE01Z-zc54U">EPC2022 | Nikola Damjanov | Living Procedurally</a></li>
+</ul>
 
                     </main>
 
