--- a/etc/snippet-node.html
+++ b/etc/snippet-node.html
@@ -412,9 +412,11 @@ Scale.x : arclen(0, 0, 0, 1)</p>
 Wire Radious: chramp("wradious", $BBY, 0) * chf("radious_mult");</p>
 <h2 id="에너지실드같은-벌집모양"><a class="header" href="#에너지실드같은-벌집모양">에너지실드같은 벌집모양</a></h2>
 <p>Sphere만들고, Divide에서 Compute Dual체크</p>
-<h2 id="rdb"><a class="header" href="#rdb">RDB</a></h2>
-<p>글자같은건 RBD Pack 하면 좋음</p>
-<p>RBD Bullet Solver 에서 Collision - Ground Collision: Ground Plane 가 있음.</p>
+<h2 id="rbd"><a class="header" href="#rbd">RBD</a></h2>
+<ul>
+<li>글자같은건 RBD Pack 하면 좋음</li>
+<li>RBD Bullet Solver 에서 Collision - Ground Collision: Ground Plane 가 있음.</li>
+</ul>
 
                     </main>
 
