--- a/etc/snippet-vex.html
+++ b/etc/snippet-vex.html
@@ -240,6 +240,9 @@ if(nrm.y &lt; 0)
     i@group_reverse = 1;
 }
 </code></pre>
+<h3 id="0--1-구간-반복"><a class="header" href="#0--1-구간-반복">0 ~ 1 구간 반복</a></h3>
+<pre><code class="language-vex">float y = abs((x % 2) - 1);
+</code></pre>
 
                     </main>
 
