--- a/file/hda.html
+++ b/file/hda.html
@@ -162,7 +162,23 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="hda"><a class="header" href="#hda">HDA</a></h1>
-<p>Houdini Digital Assets</p>
+<ul>
+<li>
+<p>HDA</p>
+<ul>
+<li><code>H</code>oudini <code>D</code>igital <code>A</code>ssets</li>
+</ul>
+</li>
+<li>
+<p>OTL</p>
+<ul>
+<li><code>O</code>perator <code>T</code>ype <code>L</code>ibrary</li>
+<li>https://www.sidefx.com/docs/hdk/_h_d_k__h_d_a_intro.html</li>
+<li>OTL은 여러 HDA를 포함할 수 있고, 스크립트 연산자와 같은 다른 연산자 정의도 저장할 수 있다</li>
+<li>https://www.andynicholas.com/post/hdas-or-otls</li>
+</ul>
+</li>
+</ul>
 <div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
 <tr><td>저장</td><td>노드 우클릭 &gt; Save Node Type 혹은 Assets &gt; Save Asset &gt; 해당 에셋</td></tr>
 <tr><td>락 풀기</td><td>Allow Editing of Contents</td></tr>
