--- a/script/glsl.html
+++ b/script/glsl.html
@@ -200,6 +200,12 @@
 </ul>
 </li>
 </ul>
+<hr />
+<p>.vert: vertex shader
+.frag: fragment shader
+.geom: geometry shader
+.tcs: tessellation control shader (GL4.0+)
+.tes: tessellation evaluation shader (GL4.0+)</p>
 
                     </main>
 
