--- a/tutorial/project_titan.html
+++ b/tutorial/project_titan.html
@@ -890,20 +890,39 @@ detail:
 </li>
 </ul>
 <hr />
+<h2 id="project-titan-platform-tool"><a class="header" href="#project-titan-platform-tool">PROJECT TITAN PLATFORM TOOL</a></h2>
+<ul>
+<li>외곽 라인 스케일 조절
+<ul>
+<li>convert line</li>
+<li>primitive split</li>
+<li>attrib promote
+<ul>
+<li>restlength:primitive =&gt; point</li>
+</ul>
+</li>
+<li>primitive properties
+<ul>
+<li>Transform - Do Translation의 스케일 조정</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<hr />
 <h2 id="project-titan-rails-tool"><a class="header" href="#project-titan-rails-tool">PROJECT TITAN RAILS TOOL</a></h2>
 <p>:pass</p>
 <h2 id="project-titan-fence-tool"><a class="header" href="#project-titan-fence-tool">PROJECT TITAN FENCE TOOL</a></h2>
 <p>: pass</p>
 <hr />
-<p>PROJECT TITAN IVY TOOL</p>
+<h2 id="project-titan-building-tool"><a class="header" href="#project-titan-building-tool">PROJECT TITAN BUILDING TOOL</a></h2>
+<h2 id="project-titan-ivy-tool"><a class="header" href="#project-titan-ivy-tool">PROJECT TITAN IVY TOOL</a></h2>
 <p>ivy: 담쟁이덩굴</p>
 <p>shrub 관목 (=bush)</p>
-<p>PROJECT TITAN PLATFORM TOOL
-PROJECT TITAN TREE PIVOT PAINTER
-PROJECT TITAN VAT CHARACTERS
-PROJECT TITAN BUILDING TOOL
-PROJECT TITAN GPT SIGNAGE
-PROJECT TITAN TRAIN TOOL</p>
+<h2 id="project-titan-tree-pivot-painter"><a class="header" href="#project-titan-tree-pivot-painter">PROJECT TITAN TREE PIVOT PAINTER</a></h2>
+<h2 id="project-titan-vat-characters"><a class="header" href="#project-titan-vat-characters">PROJECT TITAN VAT CHARACTERS</a></h2>
+<h2 id="project-titan-gpt-signage"><a class="header" href="#project-titan-gpt-signage">PROJECT TITAN GPT SIGNAGE</a></h2>
+<h2 id="project-titan-train-tool"><a class="header" href="#project-titan-train-tool">PROJECT TITAN TRAIN TOOL</a></h2>
 
                     </main>
 
